test/fail/local-not-declared.rnp
1 + a;
---
 --> fail/local-not-declared.rnp:1:5
  |
1 | 1 + a;
  |     ^ a is not declared
  |
